--- a/src/index.html
+++ b/src/index.html
@@ -3,9 +3,22 @@
     <head>
         <meta charset="UTF-8" />
         <title>Hello World!</title>
+        <link rel="stylesheet" href="css/index.css" />
     </head>
     <body>
         <h class="h1">MyHolo v1.0</h>
         <p>TDB for now...</p>
+        <div id="menu">
+            <div><button type="button" id="b_home">HOME</button></div>
+            <div><button type="button" id="b_my">我的Holo</button></div>
+            <div><button type="button" id="b_level">樓層挑戰</button></div>
+            <div><button type="button" id="b_respawn">轉生系統</button></div>
+            <div><button type="button" id="b_advance">成就列表</button></div>
+            <div><button type="button" id="b_record">挑戰紀錄</button></div>
+        </div>
+        <div id="sections"></div>
+
+        <script src="js/dependicies/jquery-3.6.0.min.js"></script>
+        <script src="js/index.js"></script>
     </body>
 </html>
