added simple file management

--- a/src/index.html
+++ b/src/index.html
@@ -3,11 +3,17 @@
     <head>
         <meta charset="UTF-8" />
         <title>Hello World!</title>
+
         <link rel="stylesheet" href="css/index.css" />
+
+        <!-- script stuff -->
+        <script defer src="js/dependicies/jquery-3.6.0.min.js"></script>
+        <script defer src="js/util.js"></script>
+        <script defer src="js/index.js"></script>
     </head>
     <body>
         <h class="h1">MyHolo v1.0</h>
-        <p>TDB for now...</p>
+        <p>To Be Finished for now...</p>
         <div id="menu">
             <div><button type="button" id="b_home">HOME</button></div>
             <div><button type="button" id="b_my">我的Holo</button></div>
@@ -17,8 +23,5 @@
             <div><button type="button" id="b_record">挑戰紀錄</button></div>
         </div>
         <div id="sections"></div>
-
-        <script src="js/dependicies/jquery-3.6.0.min.js"></script>
-        <script src="js/index.js"></script>
     </body>
 </html>
