--- a/src/index.html
+++ b/src/index.html
@@ -13,59 +13,58 @@
         <link type="text/css" rel="stylesheet" href="css/index.css" />
 
         <!-- script stuff -->
-        <script defer src="js/util.js"></script>
         <script defer src="js/index.js"></script>
     </head>
     <body>
         <h1>MyHolo v1.0</h1>
         <p>Under construction💤...</p>
         <ul id="navList">
-            <li id="nav_home" class="navTarget active">
+            <li id="nav_home" class="NavTarget ActiveLavalamp">
                 HOME
             </li>
-            <li id="nav_my" class="navTarget">
+            <li id="nav_my" class="NavTarget">
                 我的HOLO
             </li>
-            <li id="nav_lvl" class="navTarget">
+            <li id="nav_lvl" class="NavTarget">
                 樓層挑戰
             </li>
-            <li id="nav_resp" class="navTarget">
+            <li id="nav_resp" class="NavTarget">
                 轉生系統
             </li>
-            <li id="nav_adv" class="navTarget">
+            <li id="nav_adv" class="NavTarget">
                 成就列表
             </li>
-            <li id="nav_rec" class="navTarget">
+            <li id="nav_rec" class="NavTarget">
                 挑戰紀錄
             </li>
         </ul>
         <div id="d_pages">
-            <div id="pg_home" class="page" hidden>
+            <div id="pg_home" class="Page" hidden>
                 <h1>HOME</h1>
                 <p>hmmm</p>
-                <button onclick="alert('owo!')">owo!</button>
+                <button onclick="ping()">ping</button>
             </div>
-            <div id="pg_my" class="page" hidden>
+            <div id="pg_my" class="Page" hidden>
                 <h1>我的HOLO</h1>
                 <p>hmmm</p>
                 <button onclick="alert('owo!')">owo!</button>
             </div>
-            <div id="pg_lvl" class="page" hidden>
+            <div id="pg_lvl" class="Page" hidden>
                 <h1>樓層挑戰</h1>
                 <p>hmmm</p>
                 <button onclick="alert('owo!')">owo!</button>
             </div>
-            <div id="pg_resp" class="page" hidden>
+            <div id="pg_resp" class="Page" hidden>
                 <h1>轉生系統</h1>
                 <p>hmmm</p>
                 <button onclick="alert('owo!')">owo!</button>
             </div>
-            <div id="pg_adv" class="page" hidden>
+            <div id="pg_adv" class="Page" hidden>
                 <h1>成就列表</h1>
                 <p>hmmm</p>
                 <button onclick="alert('owo!')">owo!</button>
             </div>
-            <div id="pg_rec" class="page" hidden>
+            <div id="pg_rec" class="Page" hidden>
                 <h1>挑戰紀錄</h1>
                 <p>hmmm</p>
                 <button onclick="alert('owo!')">owo!</button>
