added match system.

--- a/src/index.html
+++ b/src/index.html
@@ -42,32 +42,32 @@
             <div id="pg_home" class="Page" hidden>
                 <h1>HOME</h1>
                 <p>hmmm</p>
-                <button onclick="ping()">ping</button>
+                <button onclick="ping()">ping...</button>
             </div>
             <div id="pg_my" class="Page" hidden>
                 <h1>我的HOLO</h1>
                 <p>hmmm</p>
-                <button onclick="alert('owo!')">owo!</button>
+                <button onclick="getTime()">when?</button>
             </div>
             <div id="pg_lvl" class="Page" hidden>
                 <h1>樓層挑戰</h1>
                 <p>hmmm</p>
-                <button onclick="alert('owo!')">owo!</button>
+                <button onclick="owo()">owo!</button>
             </div>
             <div id="pg_resp" class="Page" hidden>
                 <h1>轉生系統</h1>
                 <p>hmmm</p>
-                <button onclick="alert('owo!')">owo!</button>
+                <button onclick="owo()">owo!</button>
             </div>
             <div id="pg_adv" class="Page" hidden>
                 <h1>成就列表</h1>
                 <p>hmmm</p>
-                <button onclick="alert('owo!')">owo!</button>
+                <button onclick="owo()">owo!</button>
             </div>
             <div id="pg_rec" class="Page" hidden>
                 <h1>挑戰紀錄</h1>
                 <p>hmmm</p>
-                <button onclick="alert('owo!')">owo!</button>
+                <button onclick="owo()">owo!</button>
             </div>
         </div>
     </body>
