slight changes on dev tools

--- a/src/index.html
+++ b/src/index.html
@@ -94,7 +94,7 @@
                                 角色1
                             </h3>
                             <button onclick="resetAll(1);">返回預設值</button>
-                            <!-- <button>儲存</button> -->
+                            <button onclick="saveData(1);">儲存</button>
                         </div>
                         <form id="form1" spellcheck="false">
                             <label for="name1">角色名稱</label>
@@ -211,7 +211,7 @@
                                 角色2
                             </h3>
                             <button onclick="resetAll(2);">返回預設值</button>
-                            <!-- <button>儲存</button> -->
+                            <button onclick="saveData(2);">儲存</button>
                         </div>
                         <form id="form2" spellcheck="false">
                             <label for="name2">角色名稱</label>
