added experience constants for future level/experience system

--- a/src/index.html
+++ b/src/index.html
@@ -84,6 +84,7 @@
                 >
                     <h3>控制選項</h3>
                     <button onclick="testMatch();">進行測試對戰</button>
+                    <button onclick="batchMatch(1000);">もっとはやく！</button>
                     <!-- <button>欄位說明</button> -->
                     <!-- <button>可用 API 列表</button> -->
                 </div>
