separated html into different files. modified 'myholo' page

--- a/src/index.html
+++ b/src/index.html
@@ -49,249 +49,18 @@
                 <button onclick="ping()">ping...</button>
             </div>
             <div id="pg_my" class="Page" hidden>
-                <div class="flex_container">
-                    <!-- playaer avator & motto (no function for now) -->
-                    <div style="width: 250px">
-                        <img
-                            src="https://bit.ly/3aPVuST"
-                            class="my_avator Avators"
-                        />
-                        <p
-                            style="
-                                font-style: italic;
-                                color: #555;
-                                word-break: break-all;
-                                margin: 10px;
-                            "
-                            id="my_motto"
-                            hidden
-                        >
-                            速く！もっと速く！
-                        </p>
-                    </div>
-                    <!-- player info box -->
-                    <div>
-                        <h3 class="my_name centered" style="font-size: 26px">玩家暱稱</h3>
-                        <table class="my_abilities">
-                            <tr>
-                                <th>玩家等級</th>
-                                <th class="my_level">49</th>
-                            </tr>
-                            <tr>
-                                <th>累積經驗</th>
-                                <th class="my_exp">77777</th>
-                            </tr>
-                            <tr>
-                                <th>使用角色</th>
-                                <th class="my_char">なちょ猫</th>
-                            </tr>
-                            <tr>
-                                <th>狀態</th>
-                                <th class="my_status">存活</th>
-                            </tr>
-                            <tr>
-                                <td>生命值</td>
-                                <td class="my_hp">77749</td>
-                            </tr>
-                            <tr>
-                                <td>攻擊力</td>
-                                <td class="my_atk">77749</td>
-                            </tr>
-                            <tr>
-                                <td>防禦力</td>
-                                <td class="my_def">77749</td>
-                            </tr>
-                            <tr>
-                                <td>敏捷度</td>
-                                <td class="my_agi">77749</td>
-                            </tr>
-                            <tr>
-                                <td>體力值</td>
-                                <td class="my_str">77749</td>
-                            </tr>
-                            <tr>
-                                <td>技巧值</td>
-                                <td class="my_skl">77749</td>
-                            </tr>
-                            <tr>
-                                <td>幸運值</td>
-                                <td class="my_luk">77749</td>
-                            </tr>
-                        </table>
-                    </div>
-                    <!-- actions list -->
-                    <div class="centered" style="width: 300px;">
-                        <h3 style="font-size: 26px; font-weight: 100">
-                            排定直播
-                        </h3>
-                        <table id="my_streams" style="margin: 0 auto">
-                            <tr onclick="doIdle(1)">
-                                <td>一位就關臺</td>
-                                <td>8 hr</td>
-                            </tr>
-                            <tr onclick="doIdle(2)">
-                                <td>遊戲直播</td>
-                                <td>4 hr</td>
-                            </tr>
-                            <tr onclick="doIdle(3)">
-                                <td>聯動貼貼</td>
-                                <td>2 hr</td>
-                            </tr>
-                            <tr onclick="doIdle(4)">
-                                <td>感謝祭</td>
-                                <td>1 hr</td>
-                            </tr>
-                            <tr onclick="doIdle(5)">
-                                <td>歌回</td>
-                                <td>30 min</td>
-                            </tr>
-                            <tr onclick="doIdle(6)">
-                                <td>吃棉花糖</td>
-                                <td>10 min</td>
-                            </tr>
-                            <tr onclick="doIdle(7)">
-                                <td>迷因鑑賞</td>
-                                <td>5 min</td>
-                            </tr>
-                            <tr onclick="doIdle(8)">
-                                <td>雜談</td>
-                                <td>3 min</td>
-                            </tr>
-                            <tr onclick="doIdle(9)">
-                                <td>精華剪輯</td>
-                                <td>2 min</td>
-                            </tr>
-                            <tr onclick="doIdle(10)">
-                                <td>光速下播</td>
-                                <td>1 min</td>
-                            </tr>
-                        </table>
-                    </div>
-                </div>
+                <div id="pg_my_container"></div>
+                <link type="text/css" rel="stylesheet" href="css/myholo.css" />
                 <script defer src="js/myholo.js"></script>
             </div>
             <div id="pg_lvl" class="Page" hidden>
-                <div class="flex_container">
-                    <div>
-                        <img
-                            src="https://bit.ly/3aPVuST"
-                            class="my_avator Avators"
-                        />
-                    </div>
-                    <div>
-                        <!-- my abilities -->
-                        <p class="centered" style="margin-bottom: 0;">挑戰者</p>
-                        <h2 class="my_name centered" style="margin-top: 4px;">玩家暱稱</h2>
-                        <table class="infobox">
-                            <tr>
-                                <th>等級</th>
-                                <th class="my_level">49</th>
-                            </tr>
-                            <tr>
-                                <td>生命值</td>
-                                <td class="my_hp">77749</td>
-                            </tr>
-                            <tr>
-                                <td>攻擊力</td>
-                                <td class="my_atk">77749</td>
-                            </tr>
-                            <tr>
-                                <td>防禦力</td>
-                                <td class="my_def">77749</td>
-                            </tr>
-                            <tr>
-                                <td>敏捷度</td>
-                                <td class="my_agi">77749</td>
-                            </tr>
-                            <tr>
-                                <td>體力值</td>
-                                <td class="my_str">77749</td>
-                            </tr>
-                            <tr>
-                                <td>技巧值</td>
-                                <td class="my_skl">77749</td>
-                            </tr>
-                            <tr>
-                                <td>幸運值</td>
-                                <td class="my_luk">77749</td>
-                            </tr>
-                        </table>
-                    </div>
-                    <div>
-                        <!-- boss' abilities -->
-                        <p class="centered" style="margin-bottom: 0;">關主</p>
-                        <h2 class="boss_name centered" style="margin-top: 4px;">關主暱稱</h2>
-                        <table class="infobox">
-                            <tr>
-                                <th>等級</th>
-                                <th class="boss_level">49</th>
-                            </tr>
-                            <tr>
-                                <td>生命值</td>
-                                <td class="boss_hp">77749</td>
-                            </tr>
-                            <tr>
-                                <td>攻擊力</td>
-                                <td class="boss_atk">77749</td>
-                            </tr>
-                            <tr>
-                                <td>防禦力</td>
-                                <td class="boss_def">77749</td>
-                            </tr>
-                            <tr>
-                                <td>敏捷度</td>
-                                <td class="boss_agi">77749</td>
-                            </tr>
-                            <tr>
-                                <td>體力值</td>
-                                <td class="boss_str">77749</td>
-                            </tr>
-                            <tr>
-                                <td>技巧值</td>
-                                <td class="boss_skl">77749</td>
-                            </tr>
-                            <tr>
-                                <td>幸運值</td>
-                                <td class="boss_luk">77749</td>
-                            </tr>
-                        </table>
-                    </div>
-                    <div>
-                        <img
-                            src="https://bit.ly/3aPVuST"
-                            class="boss_avator Avators"
-                        />
-                    </div>
-                </div>
-                <div class="flex_container" id="boss_match_options">
-                    <div>
-                        <button onclick="doMatch();">開始挑戰</button>
-                    </div>
-                </div>
-                <div class="flex_container">
-                    <div id="boss_match_result_box" hidden>
-                        <h2 class="centered" id="boss_match_result_title">挑戰結果</h2>
-                        <ol id="boss_match_result_list">
-                            <li><span style="color: magenta">喵喵喵</span>使出了 <span style="color: blue;">owo</span></li>
-                            <li><span style="color: magenta">喵喵喵</span>又使出了 <span style="color: blue;">owo</span></li>
-                        </ol>
-                        <ul id="boss_match_result_summary">
-                            <li>挑戰者<span style="color: magenta">喵喵喵</span>勝利</li>
-                            <li>你獲得了87點經驗值</li>
-                        </ul>
-                    </div>
-                </div>
+                <div id="pg_lvl_container"></div>
+                <link type="text/css" rel="stylesheet" href="css/level.css" />
                 <script defer src="js/level.js"></script>
             </div>
             <div id="pg_resp" class="Page" hidden>
-                <h1>轉生系統</h1>
-                <div>
-                    <button class="button_min"> - </button>
-                    <span>49</span>
-                    <button class="button_add"> + </button>
-                </div>
-                <p>hmmm</p>
-                <button onclick="alert('owo')">owo!</button>
+                <div id="pg_resp_container"></div>
+                <script defer src="js/respawn.js"></script>
             </div>
             <div id="pg_adv" class="Page" hidden>
                 <div style="display: flex; justify-content: center; align-items: center; flex-flow: column;">
